--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,15 +39,16 @@ dependencies:
   firebase_auth: ^4.2.9
   lottie: ^2.2.0
   animated_splash_screen: ^1.3.0
-  carousel_slider: ^4.2.1
+  carousel_slider: ^5.0.0
   smooth_page_indicator: ^1.0.1
   fluttertoast: ^8.2.1
-  google_sign_in: ^6.1.5
+  google_sign_in: ^6.2.1
   flutter_jailbreak_detection: ^1.0.0
   encrypt: ^5.0.0
   local_auth: ^2.0.3
   permission_handler:
   flutter_windowmanager:
+  archive: 3.6.1
 
 dev_dependencies:
   flutter_test:
